--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
         </div>
         <div class="carousel-inner" style="height: 400px">
             <div class="carousel-item active" data-bs-interval="2000">
-                <img src="img/Adsız.png" class="d-block w-100 h-auto" alt="...">
+                <img src="img/Adsız.png" class="d-block img-fluid w-100 h-auto" alt="...">
                 <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255, 255, 255, 0.4)">
                     <h5>Alessandro Volta</h5>
                     <p>Demonstrating his battery's generation of electric current before Napoleon</p>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="img/Adsız2.png" class="d-block w-100" alt="...">
+                <img src="img/Adsız2.png" class="d-block img-fluid w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255, 255, 255, 0.4)">
                     <h5>First Transistor</h5>
                     <p>The single greatest discovery in last 100 years</p>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="img/p3.png" class="d-block w-100 h-100" alt="...">
+                <img src="img/p3.png" class="d-block img-fluid w-100 h-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
