--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner" style="height: 10%">
+        <div class="carousel-inner" style="height: 600px">
             <div class="carousel-item active" data-bs-interval="2000">
                 <img src="img/Adsız.png" class="d-block img-fluid w-100 h-auto" alt="...">
                 <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255, 255, 255, 0.4)">
