--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner" style="height: 15%">
+        <div class="carousel-inner" style="height: 10%">
             <div class="carousel-item active" data-bs-interval="2000">
                 <img src="img/Adsız.png" class="d-block img-fluid w-100 h-auto" alt="...">
                 <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255, 255, 255, 0.4)">
@@ -86,7 +86,7 @@
             <div class="card-header"></div>
             <div class="card-body">
                 <h5 class="card-title">Calculus I</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up 's content.</p>
+                <p class="card-text">Limit-Derivative-Integral</p>
                 <a href="index.html" class="stretched-link"></a>
             </div>
         </div>
@@ -95,7 +95,7 @@
             <div class="card-header"></div>
             <div class="card-body">
                 <h5 class="card-title">Calculus II</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Integral^+</p>
             </div>
         </div>
         <div class="card text-dark bg-danger mb-3" style="max-width: 18rem;">
