--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="card-header"></div>
             <div class="card-body">
                 <h5 class="card-title">Calculus II</h5>
-                <p class="card-text">Integral^+</p>
+                <p class="card-text">Sequences - Series - Vectors - Partial Derivative - Multiple-Line-Surface Integral</p>
             </div>
         </div>
         <div class="card text-dark bg-danger mb-3" style="max-width: 18rem;">
